Progress on Bogo and BrowserText

--- a/workbench/index.html
+++ b/workbench/index.html
@@ -1,7 +1,19 @@
 <html>
   <head>
+    <style>
+      body {
+        font-family: 'Andale Mono', monospaced;
+        font-size: 4px;
+        line-height: 5px;
+        background-color: black;
+        padding: 50px;
+        text-align: center;
+      }
+    </style>
+
   </head>
   <body>
+    <div id="field"></div>
     <script src="/main.js"></script>
   </body>
 </html>
