--- a/workbench/index.html
+++ b/workbench/index.html
@@ -3,9 +3,10 @@
     <style>
       body {
         font-family: 'Andale Mono', monospaced;
-        font-size: 4px;
+        font-size: 8px;
         line-height: 5px;
         background-color: black;
+        color: white;
         padding: 50px;
         text-align: center;
       }
@@ -13,7 +14,7 @@
 
   </head>
   <body>
-    <div id="field"></div>
+    <pre id="field"></pre>
     <script src="/main.js"></script>
   </body>
 </html>
