--- a/workbench/index.html
+++ b/workbench/index.html
@@ -14,7 +14,7 @@
 
   </head>
   <body>
-    <pre id="field"></pre>
+    <canvas id="canvas" width="128" height="64"></canvas>
     <script src="/main.js"></script>
   </body>
 </html>
