Add Square cartridge and supporting utils

--- a/workbench/index.html
+++ b/workbench/index.html
@@ -10,6 +10,11 @@
         padding: 50px;
         text-align: center;
       }
+      canvas {
+        width: 80%;
+        margin: 0 auto;
+        image-rendering: pixelated;
+      }
     </style>
 
   </head>
